@@ -147,7 +147,7 @@ bool CGUIDialogGamepad::ShowAndGetInput(CStdString& aTextString, const CStdStrin
 // \brief Show gamepad keypad twice to get and confirm a user-entered password string.
 // \param strNewPassword String to preload into the keyboard accumulator. Overwritten with user input if return=true.
 // \return true if successful display and user input entry/re-entry. false if unsucessful display, no user input, or canceled editing.
-bool CGUIDialogGamepad::ShowAndGetNewPassword(CStdString& strNewPassword)
+bool CGUIDialogGamepad::ShowAndVerifyNewPassword(CStdString& strNewPassword)
 {
   // Prompt user for password input
   CStdString strUserInput = "";
